bug fix image overflowing product card

--- a/src/css/Productcard.css
+++ b/src/css/Productcard.css
@@ -12,7 +12,8 @@
 }
 
 .card-img{
-    height: 200px;
+    max-height: 200px;
+    max-width: 200px;
     display: block;
     margin: 0 auto;
 }
